--- a/partial2/index.html
+++ b/partial2/index.html
@@ -12,8 +12,8 @@
 
 <div ng-controller="SampleAppCtr">
 
-    <h3>html element</h3>
-    <ng-include="url"></ng-include>
+ <button ng-click="clickTable()">table</button>
+    <button ng-click="clickList()">list</button>
     <h3>atribute</h3>
     <span ng-include="url"></span>
     <span class="ng-include:url;"></span>
